# SyndrumNET

./: .gitignore  LICENSE  Makefile  README.md  RUNBOOK.md  environment.yml  pyproject.toml
configs/: default.yaml
configs/diseases/: cml.yaml
docs/: DATA_SOURCES.md  METHOD_NOTES.md
scripts/: add_new_disease.py  add_new_drugs.py  build_all_data.py  evaluate.py  make_figures.py  run_pipeline.py
src/syndrumnet/: __init__.py
src/syndrumnet/data/: __init__.py  modules.py  network_builder.py
src/syndrumnet/eval/: __init__.py  benchmarks.py  metrics.py  reporting.py
src/syndrumnet/io/: __init__.py  downloaders.py  id_mapping.py  parsers.py
src/syndrumnet/metrics/: __init__.py  distances.py  null_models.py  transcription.py
src/syndrumnet/propagation/: __init__.py  prince.py  similarity_layers.py
src/syndrumnet/scoring/: __init__.py  cqab.py  pqab.py  predictor.py  tqab.py
src/syndrumnet/utils/: __init__.py  config.py  logging.py  seeds.py
src/syndrumnet/viz/: __init__.py  plots.py
tests/: test_distances.py  test_null_models.py  test_propagation.py  test_scoring.py
